[gd_scene load_steps=41 format=1]

[ext_resource path="res://UpperPart.gd" type="Script" id=1]
[ext_resource path="res://bonus.gd" type="Script" id=2]
[ext_resource path="res://img/Camada_frente_1.png" type="Texture" id=3]
[ext_resource path="res://img/Camada_frente_2.png" type="Texture" id=4]
[ext_resource path="res://img/Camada_frente_3.png" type="Texture" id=5]
[ext_resource path="res://img/temporary_heart.png" type="Texture" id=6]
[ext_resource path="res://img/temporary_heart2.png" type="Texture" id=7]
[ext_resource path="res://img/menini/standing_1.png" type="Texture" id=8]
[ext_resource path="res://img/menini/standing_2.png" type="Texture" id=9]
[ext_resource path="res://img/menini/standing_3.png" type="Texture" id=10]
[ext_resource path="res://img/menini/pain_1.png" type="Texture" id=11]
[ext_resource path="res://img/menini/pain_2.png" type="Texture" id=12]
[ext_resource path="res://img/menini/jumping_1.png" type="Texture" id=13]
[ext_resource path="res://img/menini/jumping_2.png" type="Texture" id=14]
[ext_resource path="res://img/menini/jumping_3.png" type="Texture" id=15]
[ext_resource path="res://img/menini/jumping_4.png" type="Texture" id=16]
[ext_resource path="res://img/menini/jumping_5.png" type="Texture" id=17]
[ext_resource path="res://menini.gd" type="Script" id=18]
[ext_resource path="res://menini_jumping_animations.tres" type="Animation" id=19]
[ext_resource path="res://img/onda/onda_vindo2.png" type="Texture" id=20]
[ext_resource path="res://img/onda/onda_vindo_1.png" type="Texture" id=21]
[ext_resource path="res://img/onda/onda_vindo_3.png" type="Texture" id=22]
[ext_resource path="res://fonts/bonus_font_less_space.fnt" type="BitmapFont" id=23]
[ext_resource path="res://fonts/bonus_font.fnt" type="BitmapFont" id=24]
[ext_resource path="res://marscript.gd" type="Script" id=25]
[ext_resource path="res://img/onda/mar_1.png" type="Texture" id=26]
[ext_resource path="res://img/onda/mar_2.png" type="Texture" id=27]
[ext_resource path="res://img/onda/mar_3.png" type="Texture" id=28]

[sub_resource type="Animation" id=1]

resource/name = "floatbonus"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.6, 0.9, 1.2, 1.6, 2, 2.4, 3 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ), "update":0, "values":[ Vector2( 1037.81, 466.738 ), Vector2( 832.098, 480.049 ), Vector2( 746.385, 447.583 ), Vector2( 609.244, 473.637 ), Vector2( 489.246, 491.575 ), Vector2( 403.534, 456.388 ), Vector2( 300.678, 489.379 ), Vector2( 180.68, 458.536 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/self_opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 2.7, 3 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ 1.0, 1.0, 0.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath(".:transform/scale")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 2.7, 3 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 2.5, 2.5 ) ] }

[sub_resource type="Animation" id=2]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 125, -50 ), Vector2( 125, 410 ) ] }

[sub_resource type="SpriteFrames" id=3]

animations = [ { "frames":[ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ], "loop":true, "name":"default", "speed":5.0 } ]

[sub_resource type="SpriteFrames" id=4]

animations = [ { "frames":[ ExtResource( 6 ), ExtResource( 7 ) ], "loop":true, "name":"default", "speed":5.0 } ]

[sub_resource type="SpriteFrames" id=5]

animations = [ { "frames":[ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ], "loop":true, "name":"default", "speed":5.0 }, { "frames":[ ExtResource( 11 ), ExtResource( 12 ) ], "loop":true, "name":"in_pain", "speed":3.0 }, { "frames":[ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ], "loop":false, "name":"jumping", "speed":4.0 } ]

[sub_resource type="Animation" id=6]

length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.7, 1.2, 1.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ Vector2( 100, 375 ), Vector2( 120, 274 ), Vector2( 144, 375 ), Vector2( 100, 375 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.1, 1.4, 1.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":1, "values":[ "default", "jumping", "jumping", "default" ] }

[sub_resource type="Animation" id=7]

length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.2, 0.8, 1.3, 1.5 ), "transitions":FloatArray( 1, 1, 1, 1, 1 ), "update":0, "values":[ Vector2( 100, 375 ), Vector2( 100, 393 ), Vector2( 124, 247 ), Vector2( 148, 375 ), Vector2( 100, 375 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.2, 1.3, 1.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":1, "values":[ "default", "jumping", "jumping", "default" ] }

[sub_resource type="Animation" id=8]

resource/name = "pain"
length = 20.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/self_opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.2, 0.6, 1, 1.2, 1.6, 2 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1, 1 ), "update":0, "values":[ 1.0, 0.5, 1.0, 0.5, 1.0, 0.5, 1.0 ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.3, 1.6, 2 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":1, "values":[ "default", "in_pain", "in_pain", "default" ] }

[sub_resource type="SpriteFrames" id=9]

animations = [ { "frames":[ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ], "loop":true, "name":"default", "speed":5.0 } ]

[sub_resource type="Animation" id=10]

length = 5.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 3.7, 5 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 1034, 325 ), Vector2( 305.84, 325 ), Vector2( -29, 401 ) ] }

[sub_resource type="Animation" id=11]

resource/name = "blink"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/self_opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.3, 0.5, 0.7, 1, 1.3, 1.5, 1.7, 2 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ), "update":0, "values":[ 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0 ] }

[sub_resource type="Animation" id=12]

resource/name = "movimento"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("OndasPlayer/mar_1:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5, 1 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 31, 0 ), Vector2( -10, 0 ), Vector2( 16, 9 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("OndasPlayer/mar_2:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.5, 1 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 0, 0 ), Vector2( 13, 0 ), Vector2( 6, -3 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("OndasPlayer/mar_3:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 0.5, 1 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 0, 0 ), Vector2( 15, 15 ), Vector2( 29, 13 ) ] }

[node name="UpperPart" type="Node2D"]

script/script = ExtResource( 1 )

[node name="bonus" type="Sprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 1037.81, 466.738 )
z/z = 1
region = true
region_rect = Rect2( 0, 0, 50, 50 )
script/script = ExtResource( 2 )

[node name="BonusPlayer" type="AnimationPlayer" parent="bonus"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/floatbonus = SubResource( 1 )
anims/givebonus = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Sea" type="AnimatedSprite" parent="."]

visibility/visible = false
z/z = 2
frames = SubResource( 3 )
animation = "default"
playing = true
centered = false

[node name="LifeMeter" type="Node2D" parent="."]

editor/display_folded = true

[node name="L1" type="AnimatedSprite" parent="LifeMeter"]

transform/pos = Vector2( 31.5217, 29.1011 )
frames = SubResource( 4 )
animation = "default"
centered = false

[node name="L2" type="AnimatedSprite" parent="LifeMeter"]

transform/pos = Vector2( 131.522, 29.1011 )
frames = SubResource( 4 )
animation = "default"
centered = false

[node name="L3" type="AnimatedSprite" parent="LifeMeter"]

transform/pos = Vector2( 231.522, 29.1011 )
frames = SubResource( 4 )
animation = "default"
centered = false

[node name="Menini" type="AnimatedSprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 100, 375 )
frames = SubResource( 5 )
animation = "default"
playing = true
centered = false
script/script = ExtResource( 18 )

[node name="MeniniPlayer" type="AnimationPlayer" parent="Menini"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/highjump = ExtResource( 19 )
anims/lowjump = SubResource( 6 )
anims/mediumjump = SubResource( 7 )
anims/pain = SubResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Tween" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Wave" type="AnimatedSprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 1034, 325 )
frames = SubResource( 9 )
animation = "default"
frame = 1
playing = true
centered = false

[node name="WaveAnimation" type="AnimationPlayer" parent="Wave"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/waveflow = SubResource( 10 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="bonus_text" type="Label" parent="."]

editor/display_folded = true
visibility/self_opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 824.0
margin/top = 315.0
margin/right = 1024.0
margin/bottom = 350.0
custom_fonts/font = ExtResource( 23 )
custom_constants/line_spacing = 0
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BonusTextPlayer" type="AnimationPlayer" parent="bonus_text"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/blink = SubResource( 11 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="combo_text" type="Label" parent="."]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 824.0
margin/top = 250.0
margin/right = 1024.0
margin/bottom = 300.0
custom_fonts/font = ExtResource( 24 )
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ComboTextPlayer" type="AnimationPlayer" parent="combo_text"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/blink = SubResource( 11 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="OndasPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/movimento = SubResource( 12 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "movimento"
script/script = ExtResource( 25 )

[node name="mar_1" type="Sprite" parent="OndasPlayer"]

transform/pos = Vector2( 16, 9 )
z/z = 2
texture = ExtResource( 26 )
centered = false
region = true
region_rect = Rect2( 0, 0, 1024, 576 )

[node name="mar_2" type="Sprite" parent="OndasPlayer"]

transform/pos = Vector2( 6, -3 )
z/z = 1
texture = ExtResource( 27 )
centered = false
region = true
region_rect = Rect2( 0, 0, 1024, 576 )

[node name="mar_3" type="Sprite" parent="OndasPlayer"]

transform/pos = Vector2( 29, 13 )
texture = ExtResource( 28 )
centered = false
region = true
region_rect = Rect2( 0, 0, 1024, 576 )

[connection signal="finished" from="bonus/BonusPlayer" to="." method="_on_BonusPlayer_finished"]

[connection signal="finished" from="bonus_text/BonusTextPlayer" to="." method="_on_BonusTextPlayer_finished"]

[connection signal="finished" from="OndasPlayer" to="OndasPlayer" method="_on_OndasPlayer_finished"]


